--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ ul.authors{
     transition: all 0.5s ease;
     list-style-type: none;
 }
-ul.authors a{
+ul.authors .box-item{
     text-decoration: none;
     width: 100%;
     display: block;
@@ -49,7 +49,7 @@ ul.authors a{
     transition: all 0.3s ease-in-out;
     border-radius: 10px;
 }
-ul.authors li a:hover{
+ul.authors li .box-item:hover{
     box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
 }
 ul.authors li{
@@ -87,6 +87,10 @@ ul.authors li img{
     transition: all 0.3s ease-in-out;
     border-radius: 50%;
 }
-ul.authors a:hover img{
+ul.authors .box-item:hover img{
     filter: grayscale(0%);
+}
+
+.no-pointer{
+    cursor: no-drop !important;
 }
